--- a/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
+++ b/playbooks/roles/setup_common/tasks/ipv6-hetzner.yaml
@@ -5,14 +5,19 @@
   ansible.builtin.debug:
     var: ansible_facts.default_ipv6
 
-- name: Change IPv6 to non-default
+- name: Change IPv6 to non-default ::1
   when: ansible_facts.default_ipv6.address != _ipv6_new
   vars:
     _ipv6_prefix: "{{ (ansible_facts.default_ipv6.address | split(':'))[:4] | join(':') }}"
-    _a: "{{ range(0, 65535) | random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'A' + _ipv6_prefix) }}"
-    _b: "{{ range(0, 65535) | random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'B' + _ipv6_prefix) }}"
-    _c: "{{ range(0, 65535) | random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'C' + _ipv6_prefix) }}"
-    _d: "{{ range(0, 65535) | random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'D' + _ipv6_prefix) }}"
+    _a: "{{ range(0, 65535) |
+      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'A' + _ipv6_prefix) }}"
+    _b: "{{ range(0, 65535) |
+      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'B' + _ipv6_prefix) }}"
+    _c: "{{ range(0, 65535) |
+      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'C' + _ipv6_prefix) }}"
+    _d: "{{ range(0, 65535) |
+      random(seed=seed_address + inventory_hostname + ansible_facts.default_ipv4.address + 'D' + _ipv6_prefix) }}"
+    # yamllint disable-line rule:line-length
     _ipv6_new: "{{ _ipv6_prefix }}:{{ '%x' % (_a | int) }}:{{ '%x' % (_b | int) }}:{{ '%x' % (_c | int) }}:{{ '%x' % (_d | int) }}"
   block:
     - name: Change IPv6 for Debian
