--- a/playbooks/roles/snapshot/tasks/snapshot.yaml
+++ b/playbooks/roles/snapshot/tasks/snapshot.yaml
@@ -7,4 +7,5 @@
     _description: "{{ inventory_hostname | regex_replace('^hi', '') }}"
   ansible.builtin.command:
     cmd: >-
-      hcloud --quiet --poll-interval 36s server create-image --type snapshot --description='{{ _description }}' {{ inventory_hostname }}
+      hcloud --quiet --poll-interval 36s server create-image --type snapshot --description='{{ _description }}'
+      {{ inventory_hostname }}
