--- a/playbooks/roles/setup_common/tasks/system-config.yaml
+++ b/playbooks/roles/setup_common/tasks/system-config.yaml
@@ -92,3 +92,17 @@
     dest: /etc/systemd/system/systemd-networkd-wait-online.service.d/override.conf
   notify:
     - Reload Systemd
+
+- name: Deactivate service apport
+  when: ansible_facts.distribution in ('Ubuntu')
+  ansible.builtin.systemd_service:
+    name: apport
+    enabled: false
+    state: stopped
+    no_block: true
+
+- name: Disable apport autostart
+  ansible.builtin.lineinfile:
+    line: "enabled=0"
+    path: /etc/default/apport
+    regex: "^enabled="
