--- a/playbooks/roles/setup_tor/defaults/main.yaml
+++ b/playbooks/roles/setup_tor/defaults/main.yaml
@@ -2,14 +2,12 @@
 tor_build_from_source: true
 
 tor_git_version: main
-tor_patches: []
+tor_git_patches: []
 tor_remove_git_repo: false
 
 lyrebird_git_version: main
 lyrebird_patches: []
 lyrebird_remove_git_repo: false
-
-tor_debian_target: "" # e.g. tor-nightly-main-bookworm, default is stable
 
 # 2 lists for additional torrc values
 torrc_config_group: []
