fix unknown variables

--- a/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
+++ b/playbooks/roles/setup_snowflake/tasks/snowflake-src.yaml
@@ -18,7 +18,7 @@
   ansible.builtin.include_tasks: "{{ playbook_dir }}/roles/setup_common/tasks/_git.yaml"
 
 - name: Build
-  throttle: "{{ torproject_connections }}"
+  throttle: 16
   changed_when: false
   ansible.builtin.command:
     cmd: go build -v
