--- a/playbooks/roles/setup_common/tasks/base.yaml
+++ b/playbooks/roles/setup_common/tasks/base.yaml
@@ -29,3 +29,16 @@
   ansible.builtin.shell:
     cmd: wc -l </root/.ssh/authorized_keys
   register: _result
+
+- name: Check for outdated dpkg lock file
+  ansible.builtin.stat:
+    path: /var/lib/dpkg/lock-frontend
+  register: _lockfile
+
+- name: Remove outdated dpkg lockfile
+  when: _lockfile.stat.exists and _age | int > 3600
+  vars:
+    _age: "{{ now(utc=true, fmt='%s') | float - _lockfile.stat.atime }}"
+  ansible.builtin.file:
+    path: /var/lib/dpkg/lock-frontend
+    state: absent
