--- a/playbooks/roles/setup_common/tasks/update-apt.yaml
+++ b/playbooks/roles/setup_common/tasks/update-apt.yaml
@@ -9,10 +9,17 @@
 - name: Install/Update common software
   ansible.builtin.apt:
     name:
+      - git
       - needrestart
       - psmisc
       - python3-psutil
       - rsync
+
+- name: Do not run Git cleanup in background
+  when: ansible_facts.memtotal_mb < 4096 or ansible_facts.processor_vcpus < 4
+  changed_when: false
+  ansible.builtin.command:
+    cmd: git config --global --add gc.autoDetach false
 
 - name: Install/Update additional software
   when: additional_software
