--- a/playbooks/roles/setup_common/tasks/_git.yaml
+++ b/playbooks/roles/setup_common/tasks/_git.yaml
@@ -12,7 +12,7 @@
   block:
     - name: New clone "{{ _repo_dir }}"
       throttle: 8
-      when: __new.before == "null"
+      when: __new.before == None
       block:
         - name: Shallow clone "{{ _repo_dir }}"
           ansible.builtin.git:
