get fresh uname value

--- a/playbooks/roles/setup_common/tasks/kernel-src.yaml
+++ b/playbooks/roles/setup_common/tasks/kernel-src.yaml
@@ -170,6 +170,11 @@
           swapon /swapfile
         creates: /swapfile
 
+    - name: Gather facts - kernel version
+      ansible.builtin.setup:
+        gather_subset:
+          - hardware
+
     - name: Build Linux
       async: "{{ (75 * 60) | int }}"
       poll: 0
