--- a/playbooks/roles/snapshot/tasks/main.yaml
+++ b/playbooks/roles/snapshot/tasks/main.yaml
@@ -13,6 +13,7 @@
     - snapshot
 
 - name: Delete instance
+  when: delete_image_after_snapshot | bool
   ansible.builtin.import_tasks: delete-instance.yaml
   tags:
     - delete-instance
