--- a/playbooks/roles/setup_common/tasks/update-apt.yaml
+++ b/playbooks/roles/setup_common/tasks/update-apt.yaml
@@ -5,19 +5,22 @@
     state: stopped
     enabled: false
 
-- name: Getting process IDs of package manager/s
+- name: Allow phased updates in Ubuntu
+  when: ansible_facts.distribution in ('Ubuntu')
+  ansible.builtin.copy:
+    src: 20phased-updates
+    dest: /etc/apt/apt.conf.d/
+
+- name: Install/Update common software
+  ansible.builtin.apt:
+    name:
+      - python3-psutil
+
+- name: Ensure no package manager is running
   failed_when: _processes.pids
   community.general.pids:
     pattern: apt.*|dpkg.*
   register: _processes
-
-- name: Remove stale dpkg lockfiles
-  ansible.builtin.file:
-    path: "{{ item }}"
-    state: absent
-  loop:
-    - /var/lib/dpkg/lock
-    - /var/lib/dpkg/lock-frontend
 
 - name: De-install freeipmi at IONOS
   when: ansible_facts.system_vendor == 'QEMU'
@@ -32,22 +35,9 @@
       - git
       - needrestart
       - psmisc
-      - python3-psutil
       - rsync
-
-- name: Do not run Git cleanup in background
-  when: ansible_facts.memtotal_mb < 4096 or ansible_facts.processor_vcpus < 4
-  changed_when: false
-  ansible.builtin.command:
-    cmd: git config --global --add gc.autoDetach false
 
 - name: Install/Update additional software
   when: additional_software
   ansible.builtin.apt:
     name: "{{ additional_software }}"
-
-- name: Allow phased updates in Ubuntu
-  when: ansible_facts.distribution in ('Ubuntu')
-  ansible.builtin.copy:
-    src: 20phased-updates
-    dest: /etc/apt/apt.conf.d/
