--- a/playbooks/roles/info_setup/tasks/_issue.yaml
+++ b/playbooks/roles/info_setup/tasks/_issue.yaml
@@ -3,32 +3,31 @@
   delegate_to: localhost
   throttle: 1
   ansible.builtin.lineinfile:
-    line: "{{ _marker }}"
+    line: "{{ _issue }}"
     path: "{{ tmp_dir }}/{{ issue_fname_prefix }}-issue.log"
-    regex: "^{{ _marker }}$"
+    regex: "^{{ _issue }}$"
   register: _issue
 
 - name: Get issue details
   when: _issue.changed
   block:
-    - name: Get issue details
+    - name: Get issue trace
       changed_when: false
       ansible.builtin.shell:
         cmd: |-
           journalctl --since "{{ issue_since }}" --quiet |
-            awk '/{{ item }}/,/ kernel: ---[ end trace /'
-      register: _details
+            awk "/{{ item | regex_replace('\/', '\\/') | regex_replace('\[', '\\[') }}/,/ kernel: ---\[ end trace /"
+      register: _trace
 
-    - name: File issue details
+    - name: File issue trace
       delegate_to: localhost
       throttle: 1
       ansible.builtin.blockinfile:
-        block:
-          "{{ '# ' + inventory_hostname + '   ' + ansible_facts.lsb.description
-          + '   ' + now(utc=true, fmt='%Y-%m-%d %H:%M:%S') + '\n#\n' + _details.stdout
-          }}"
-        path: "{{ tmp_dir }}/{{ issue_fname_prefix }}-issue-details.log"
-        marker: "# {mark} {{ _marker }}"
+        block: |
+          # {{ inventory_hostname }}    {{ ansible_facts.lsb.description }}    {{ now(utc=true, fmt='%Y-%m-%d %H:%M:%S') }}
+          {{ _trace.stdout }}
+        path: "{{ tmp_dir }}/{{ issue_fname_prefix }}-issue-trace.log"
+        marker: "# {mark} {{ _issue }}"
         marker_begin: "ISSUE BEGIN"
         marker_end: "ISSUE END"
 
